# Lares

./: .beans.yml  .env.example  .gitignore  .gitlab-ci.yml  NOTICE  README.md  beans.md  docker-compose.yml  lares.service  lares.service.example  pyproject.toml  run.py  schema.sql  test_approval.txt  test_write.txt
.beans/: lares-0al2--remove-deprecated-lares-agent-id-and-use-direct-ll.md  lares-23mg--research-switching-to-local-llm.md  lares-3db2--add-no-approval-tools-to-mcp-server.md  lares-48p6--consolidate-load-dotenv-handling.md  lares-4kwh--phase-4-unify-approval-system.md  lares-4rma--phase-2-extract-llm-interface.md  lares-5ifi--fix-post-sqlite-transition-issues.md  lares-79xz--fix-load-config-to-use-load-discord-config.md  lares-7ivd--add-num-ctx-parameter-to-ollama-provider.md  lares-7x2m--phase-1-migration-docs.md  lares-81aw--audit-and-update-beans-to-match-implementation-rea.md  lares-8pm2--sse-event-consumer.md  lares-8zub--fix-scheduler-not-starting-in-mcp-tools.md  lares-9kf9--modular-architecture.md  lares-9o9h--fix-test-graph-memorypy-issues.md  lares-b4b6--audit-and-refactor-tool-execution-architecture.md  lares-cm6s--fix-post-sqlite-transition-issues.md  lares-d370--add-discord-client-to-mcp-server.md  lares-dmml--fix-approval-reaction-and-path-boundary-bug.md  lares-fds2--fix-missing-complete-method-in-llm-providers.md  lares-fk05--fix-gitlab-ci-pipeline.md  lares-gcmh--fix-write-file-approval-bypass-for-allowed-paths.md  lares-ggiy--fix-approval-bypass-for-write-file-outside-allowed.md  lares-impg--fix-memory-tools-requiring-approval.md  (+20 more)
(+106 files in other folders)
